fix: editor overflow

--- a/static/css/editor.css
+++ b/static/css/editor.css
@@ -3,10 +3,9 @@
     display: flex;
 }
 #editor{
-    height: 100%;
     flex: 1;
 }
 #output{
-    height: 100%;
     flex: 1;
+    overflow: auto;
 }
